add span at main layout

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <!-- <div class="main-text">
       <section>
-        <h3 class="headling">Номер заказа: {{ .OrderUid }}</h3>
+        <h3 class="headling">Номер заказа: <span class="data__inner">{{ .OrderUid }}</span></h3>
         <ul class="main-text-general data-list">
           <li class="data-list__item">Трек - Номер: <span class="data__inner">{{ .TrackNumber }}</span></li>
           <li class="data-list__item">ID клиента: <span class="data__inner">{{ .CustomerId }}</span></li>
